--- a/css/style.css
+++ b/css/style.css
@@ -28,8 +28,13 @@ header {
 }
 
 .logo img {
-    height: 80px;
+    height: 90px;
     margin-bottom: 30px;
+    border-radius: 20px;
+}
+
+.logo img:hover {
+    background-color: royalblue;
 }
 
 .list-inline > li{
@@ -46,21 +51,61 @@ header {
     font-size: 18px;
 }
 
+.list-inline a:hover {
+    cursor: pointer;
+    color: royalblue;
+}
+
 .jumbotron {
     height: 400px;
-    background-color: yellowgreen;
+    background-image: url(../img/banner.jpg);
+    background-size: cover;
+    background-position: center;
 }
+
+.text-inside {
+    width: 70%;
+    font-size: 15px;
+    color: whitesmoke;
+    padding-top: 250px;
+    padding-left: 50px;
+    text-align: justify;
+}
+
+.layover {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 140, 213, 0.2);
+}
+
+
 
 /* main */
 
 .container2.clearfix {
-    background-color: blue;
     margin-top: 25px;
 }
 
 .top {
     height: 100px;
-    background-color: lightsteelblue;
+}
+
+.title {
+    padding: 10px 0;
+}
+
+.black-text {
+    color: black;
+    font-size: 40px;
+}
+
+.gray-text {
+    color:gray;
+    font-size: 20px;
+}
+
+.left {
+    
 }
 
 .left,
