--- a/css/style.css
+++ b/css/style.css
@@ -78,6 +78,7 @@ header {
     width: 100%;
     height: 100%;
     background-color: rgba(0, 140, 213, 0.2);
+    border-radius: 10px;
 }
 
 /* main */
